# Navigation_Box_HASM

./: Error.csv  RealPose.csv  StartingUDP.txt  lidar_intrinsics_original.json
Software_stack/src/agv_dynamic_model/: CMakeLists.txt
Software_stack/src/agv_dynamic_model/launch/: agv_simulator.launch.py
Software_stack/src/agv_dynamic_model/src/: agv_dynamic_model.cpp  agv_dynamic_model.hpp
Software_stack/src/aiim_autoware_msgs/: CMakeLists.txt  Dockerfile  package.xml
Software_stack/src/aiim_autoware_msgs/action/: PlanTrajectoryAutoware.idl
Software_stack/src/aiim_autoware_msgs/msg/: BoundingBoxArray.idl  Complex32.idl  ControlDiagnostic.idl  DetectedObject.idl  GearCommand.idl  HADMapBin.idl  PointXYZIF.idl  TrajectoryPoint.idl  TrajectoryPointAutoware.idl  VehicleKinematicState.idl  VehicleStateCommand.idl  VehicleStateReport.idl
Software_stack/src/aiim_autoware_msgs/srv/: ModifyTrajectory.idl
Software_stack/src/navigation_box/: CMakeLists.txt
Software_stack/src/navigation_box/models/: agv.urdf.xml
Software_stack/src/ouster_initializer/: CMakeLists.txt  Dockerfile  package.xml
Software_stack/src/ouster_initializer/ouster_client/: Dockerfile
Software_stack/src/ouster_initializer/src/: ouster_initializer.cpp  ouster_initializer_node.hpp
Software_stack/src/udp_control_msg_client/: package.xml
Software_stack/src/udp_control_msg_client/launch/: udp_control_msg_client.launch.py
Software_stack/src/udp_control_msg_client/params/: default.yaml
src/aiim_autoware_common/aiim_autoware_common/: package.xml
src/aiim_autoware_common/aiim_autoware_common/design/: comparisons.md
src/aiim_autoware_common/aiim_autoware_common/include/aiim_autoware_common/: filesystem.hpp  type_traits.hpp  types.hpp
src/aiim_autoware_common/aiim_autoware_common/include/aiim_helper_functions/: angle_utils.hpp  mahalanobis_distance.hpp  message_adapters.hpp  template_utils.hpp  type_name.hpp
src/aiim_autoware_common/aiim_autoware_common/test/: gtest_main.cpp  test_mahalanobis_distance.cpp
src/aiim_autoware_common/aiim_state_vector/: CMakeLists.txt  package.xml
src/aiim_autoware_common/aiim_state_vector/design/: state-design.md
src/aiim_autoware_common/aiim_state_vector/include/aiim_state_vector/: common_states.hpp  common_variables.hpp  variable.hpp  visibility_control.hpp
src/aiim_autoware_common/aiim_state_vector/test/: test_generic_state.cpp  test_variables.cpp
src/aiim_autoware_common/aiim_tf2/: package.xml
src/aiim_autoware_common/aiim_tf2/include/aiim_tf2/: tf2_aiim_autoware_msgs.hpp
src/aiim_autoware_common/aiim_tf2/test/: test_tf2_aiim_autoware_msgs.cpp
src/aiim_autoware_common/aiim_time_utils/: CMakeLists.txt  package.xml
src/aiim_autoware_common/aiim_time_utils/src/aiim_time_utils/: time_utils.cpp
src/aiim_control/controller_common/: CMakeLists.txt  package.xml
src/aiim_control/controller_common/test/: behavior.cpp  state_tracking.cpp
src/aiim_control/controller_common_nodes/: CMakeLists.txt  package.xml
src/aiim_control/controller_common_nodes/test/: bad_cases.cpp  sanity_check.cpp  transform.cpp
src/aiim_control/pure_pursuit/: CMakeLists.txt  package.xml
src/aiim_control/pure_pursuit/test/: gtest_main.cpp  sanity_checks.cpp  test_pure_pursuit.cpp
src/aiim_control/pure_pursuit_nodes/: CMakeLists.txt  package.xml
src/aiim_control/pure_pursuit_nodes/param/: pure_pursuit.param.yaml  pure_pursuit_test.param.yaml  test.param.yaml
src/aiim_motion/aiim_motion_common/: CMakeLists.txt
src/aiim_motion/aiim_motion_common/test/: gtest_main.cpp
src/aiim_motion/aiim_motion_model/: CMakeLists.txt
src/aiim_motion/aiim_motion_model/test/: test_differential_motion_model.cpp
src/aiim_motion/aiim_motion_testing_nodes/: CMakeLists.txt
src/aiim_motion/aiim_motion_testing_nodes/test/: periodic_publisher.cpp  sanity_check.cpp
src/aiim_planning/object_collision_estimator/: CMakeLists.txt  package.xml
src/aiim_planning/object_collision_estimator/src/: object_collision_estimator.cpp
src/manual_controller/: package.xml
src/manual_controller/manual_controller/: control_publisher.py  joystick_publisher.py
src/mqtt_pubsub/: package.xml  setup.cfg
src/mqtt_pubsub/data/: 12_P2P3parkingSimpleDemoTrial2.csv  13_P2P1parkingSimpleDemoTrial2.csv  1_P4P1parkingSimpleDemoTrial3.csv  2_P1P4parkingSimpleDemoTrial3.csv  3_BA_IT_20220403_aurora_to_luna.csv  4_RecPathBestPart1.csv  5_RecPathBestPart2.csv  6_ParkingStraightPath.csv  8_ParkingComplexPath.csv  9_ParkingParallel.csv
src/mqtt_pubsub/mqtt_pubsub/: mqtt_autoware_interface.py  subscriber_member_function.py
src/navigation_box/: package.xml
src/navigation_box/launch/: buurautonoom.launch.py  navigation_box.launch.py  simulation_motion.launch.py
src/navigation_box/models/: agv.dae
src/navigation_box/navigation_box/: control_nodes.py  localization_nodes.py  map_loader.py  mqtt_interface.py  navigation_box.py  path_planners.py  planning_nodes.py
src/navigation_box/params/: tuecampus.yaml
src/navigation_box/rviz/: navigation_box.rviz
src/path_cluster_detection/: CMakeLists.txt  package.xml
src/path_cluster_detection/launch/: path_cluster_detection.launch.py
src/path_cluster_detection/params/: default.yaml
src/path_cluster_detection/src/: path_cluster_detection.cpp  path_cluster_detection_node.cpp  path_cluster_detection_node.hpp
src/pcap_streamer/: .gitignore  CMakeLists.txt  Dockerfile  package.xml
src/pcap_streamer/params/: default.yaml
src/pcap_streamer/slam_libs/builder/: .gitignore  Jenkinsfile  Jenkinsfile_coverage.groovy  Jenkinsfile_systemtests.groovy  get_repos.sh
src/pcap_streamer/slam_libs/mms_shared/: .gitignore  CMakeLists.txt
src/pcap_streamer/slam_libs/slam/: .gitignore  CMakeLists.txt  dependencies.txt
src/pcap_streamer/src/: pcap_streamer_node.cpp  pcap_streamer_node.hpp
src/points_map_loader/: CMakeLists.txt  package.xml
src/points_map_loader/src/: points_map_loader.cpp
src/voxel_grid_filter/: CMakeLists.txt
src/voxel_grid_filter/params/: default.yaml
src/voxel_grid_filter/src/: voxel_grid_filter.cpp  voxel_grid_filter_node.hpp
(+1178 files in other folders)
