<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mqtt_pubsub</name>
  <version>0.0.0</version>
  <description>Making a pub/sub package to receive data from mqtt server and publish it to a subscriber</description>
  <maintainer email="a.moayyedi@tue.nl">alireza</maintainer>
  <license>Apache License 2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <!-- <depend>autoware_auto_planning_msgs</depend> -->
  <depend>motion_common</depend>
  <depend>autoware_auto_geometry</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>recordreplay_planner_nodes</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
