<?xml version="1.0"?>
<!--
 Copyright (C) 2020 by NavInfo Europe B.V. The Netherlands - All rights reserved
 Information classification: Confidential
 This content is protected by international copyright laws.
 Reproduction and distribution is prohibited without written permission.
-->
<package format="3">
    <name>path_cluster_detection</name>
    <version>2.0.0</version>
    <description>The path_cluster_detection package</description>

    <maintainer email="info@aiim.ai">AIIM - Vehicles Team</maintainer>
    <license>NavInfo Europe B.V. The Netherlands - Confidential</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>aiim_ros_cmake</buildtool_depend>

    <exec_depend>aiim_rospy</exec_depend>
    
    <depend>aiim_roscpp</depend>
    <depend>aiim_geometry</depend>
    <depend>aiim_autoware_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
