<?xml version="1.0"?>
<!--
  Copyright (C) 2021 by NavInfo Europe B.V. The Netherlands - All rights reserved
  Information classification: Confidential
  This content is protected by international copyright laws.
  Reproduction and distribution is prohibited without written permission.
-->
<package format="2">
  <name>pcap_streamer</name>
  <version>1.0.0</version>
  <description>The pcap_streamer package</description>
  <maintainer email="info@aiim.ai">AIIM</maintainer>
  <license>NavInfo Europe B.V. The Netherlands - Confidential</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>aiim_ros_cmake</buildtool_depend>

  <exec_depend>aiim_rospy</exec_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>aiim_roscpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
