<?xml version="1.0"?>
<!--
  Copyright (C) 2021 by NavInfo Europe B.V. The Netherlands - All rights reserved
  Information classification: Confidential
  This content is protected by international copyright laws.
  Reproduction and distribution is prohibited without written permission.
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>udp_control_msg_client</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="info@aiim.ai">AIIM</maintainer>
  <license>NavInfo Europe B.V. The Netherlands - Confidential</license>

  <depend>[deps]</depend>
  <exec_depend>aiim_autoware_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
